--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <title>14 de Febrero – Para Ti</title>
+  <title>Feliz Cumpleaños Mi Niña</title>
   <style>
     :root{
       --bg:#0f0f0f;
@@ -79,8 +79,8 @@
 </head>
 <body>
   <header>
-    <h1>14 de Febrero</h1>
-    <h2>Un detalle que pensé para ti</h2>
+    <h1>Feliz Cumpleaños Mi Niña</h1>
+    <h2>Un detalle que cree para ti <3 </h2>
   </header>
 
   <main>
@@ -158,3 +158,4 @@ Gracias por todo, mi niña. Realmente te amé. Y te sigo amando.      </div>
 
 </body>
 </html>
+
